<resources>
    <string name="app_name">VoterReach</string>
    <string name="action_settings">Settings</string>

    <string name="Name"> No Caller</string>
    <string name="CallButton"> Call Voter</string>
    <string name="EnterButton"> Enter Survey</string>

    <string name="Voting"> Will Vote</string>
    <string name="No_Answer"> Did not Answer</string>
    <string name="Party"> Host a house party</string>
    <string name="Canvassing"> Canvassing</string>
    <string name="Donate"> Donate</string>
    <string name="Bad_Number"> Bad Number</string>
    <string name="Contacted"> Contacted</string>
    <string name="Save"> Save</string>

    <string-array name= "Volunteering">
        <item> Volunteer?</item>
        <item> Host a House Party!</item>
        <item> Canvassing</item>
        <item> Phone Banking</item>
        <item> Donating</item>
        <item> No </item>
    </string-array>
</resources>
