<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.voterreach.ogruiz.voterreach.SaveActivity"
    tools:showIn="@layout/activity_save"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true">


    <CheckBox
        android:id="@+id/votingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Voting"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:onClick="checkVote"/>

    <CheckBox
        android:id="@+id/partyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Party"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:onClick="checkParty"/>

    <CheckBox
        android:id="@+id/canvassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Canvassing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:onClick="checkCanvass"/>

    <CheckBox
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:onClick="checkDonate"/>

    <CheckBox
        android:id="@+id/noAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No_Answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="noAnswer"/>

    <CheckBox
        android:id="@+id/badNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bad_Number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:onClick="badNumber"/>

    <CheckBox
        android:id="@+id/Contacted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contacted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:onClick="contacted"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:onClick="checkSave"/>




</android.support.constraint.ConstraintLayout>
